# aws_training

./: .gitignore  README.md  build.sh  publisher.py  pyproject.toml  requirements.txt
cloud_formation/: aws_lambda.py  bucket.py  cloudformation_generator.py  sns.py
cloud_formation/config/: config.yaml
cloud_formation/config/dev/: lambda-func.yaml
cloud_formation/config/qa/: lambda_func.yaml
cloud_formation/templates/: lambda-func.json
src/: cf.yaml  cloudformation_generator.py  db.py  lambda_function.py
src/cf/: aws_lambda.py  bucket.py  db.py
